fix: modifica método de listar todos os produtos na ProductService e ProductController